Fixed button layout issue

--- a/style.css
+++ b/style.css
@@ -1697,7 +1697,7 @@ input, textarea {
   border-right-color: #316ba5;
 }
 .button-group .dropdown-toggle {
-  height: 1.26em;
+  height: 1.25em;
   border-left-color: #4eb1e5;
   -moz-border-radius-topleft: 0;
   -moz-border-radius-bottomleft: 0;
